@@ -19,8 +19,10 @@ BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-buildroot
 #BuildRequires:	libqt4-devel >= 4.4
 %if %{defined fedora}
 BuildRequires:	qt5-qtbase-devel >= 5.1, qt5-linguist
+BuildRequires:	qt5-qtx11extras-devel >= 5.1
 %else
 BuildRequires:	libqt5-qtbase-devel >= 5.1, libqt5-linguist
+BuildRequires:	libqt5-qtx11extras-devel >= 5.1
 %endif
 BuildRequires:	alsa-devel
 
