@@ -107,4 +107,7 @@ unix {
 # QT5 support
 !lessThan(QT_MAJOR_VERSION, 5) {
 	QT += widgets
+	unix {
+		QT += x11extras
+	}
 }
